# barni_matmod_ai_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  evaluate.py  main.py  pyproject.toml  run_pipeline.py
data/: assistant.db  registry.json
data/index/: faiss.index  metadata.json
outputs/20260510_233515/: research_definition.json
outputs/20260511_101013/: assembly_plan.json  generated_script.py  reranked_datasets.json  retrieved_datasets.json
outputs/20260511_101231/: reranked_datasets.json
outputs/20260511_113323/: assembly_plan.json  generated_script.py
outputs/20260511_113549/: assembly_plan.json  dataset_structure.json  generated_script.py  research_definition.json  research_design.json  retrieved_datasets.json
outputs/20260511_115529/: assembly_plan.json  generated_script.py  research_definition.json  research_design.json  validation_report.json
outputs/20260511_120321/: assembly_plan.json  dataset_structure.json  generated_script.py  reranked_datasets.json  research_definition.json  research_design.json  retrieved_datasets.json
outputs/20260511_120927/: assembly_plan.json  dataset_structure.json  generated_script.py  reranked_datasets.json  research_definition.json  research_design.json
outputs/20260511_121440/: assembly_plan.json  dataset_structure.json  generated_script.py  reranked_datasets.json  research_definition.json  research_design.json  retrieved_datasets.json
outputs/20260511_122134/: assembly_plan.json  dataset_structure.json  generated_script.py  reranked_datasets.json  research_definition.json  research_design.json  retrieved_datasets.json
outputs/20260511_122847/: assembly_plan.json  dataset_structure.json  generated_script.py  output_validation.json  research_definition.json  research_design.json
outputs/20260511_123346/: assembly_plan.json  dataset_structure.json  generated_script.py  output_dataset.csv  output_dataset_metadata.json  research_definition.json  research_design.json
outputs/20260511_124432/: assembly_plan.json  dataset_structure.json  generated_script.py  reranked_datasets.json  research_definition.json  research_design.json  retrieved_datasets.json
outputs/20260511_135805/: assembly_plan.json  dataset_structure.json  generated_script.py  output_dataset.csv  output_dataset_metadata.json  reranked_datasets.json  research_definition.json  research_design.json  (+1 more)
tests/: test_executor.py  test_output_validator.py  test_reranker.py  test_skills.py  test_stop_logic.py  test_validator.py
(+57 files in other folders)
