[project]
name = "barni-matmod-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
