[project]
name = "barni-matmod-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.2",
    "uvicorn>=0.46.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
